--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="inner"></div>
         </div>
         <nav id="navigation" class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="#">Moonen Nikita</a>
+            <a class="navbar-brand" href="#">Nikita Moonen</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,6 +55,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="#contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
                     </li>
                 </ul>
 
@@ -246,198 +249,21 @@
             </div>
         </div>
 
-        <!-- <div id="portfolio" class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="heading">
-                        <h2>Portfolio</h2>
-                    </div>
-                    <div class="filter">
-                        <ul id="filters">
-                            <li><a href="#" data-filter="*" class="current">ALL</a></li>
-                            <li><a href="#" data-filter=".apps">Apps</a></li>
-                            <li><a href="#" data-filter=".webApps">Web Apps</a></li>
-                            <li><a href="#" data-filter=".websites">Websites</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="itemsContainer">
-                        <ul class="items">
-                            <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-                            <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-                            <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-                            <li onclick="" class="webApps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-                            <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-                            <li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-                            <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-                            <li onclick="" class="webApps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-                            <li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-                            <li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-                            <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-                            <li onclick="" class="webApps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                                <div class="item">
-                                    <img src="images/portfolio/thumbnail/work1.jpg" alt="Work in progress">
-                                    <div class="icons">
-                                        <a href="images/portfolio/work.jpg" title="View image" class="openButton"
-                                            data-fancybox data-caption="Work in progress"><i
-                                                class="fas fa-search"></i></a>
-
-                                        <a href="" target="_blank" class="projectLink"><i class="fas fa-link"></i></a>
-                                    </div>
-                                    <div class="imageOverlay"></div>
-                                </div>
-                            </li>
-
-
-                        </ul>
-                    </div>
+        <div class="projects section container">
+            <h2>projects</h2>
+            <div class="row">
+                <div class="col-xs-6 projectDrumkit">
+                    <img src="images/portfolio/drumKit.png" alt="drum kit">
                 </div>
-
+                <div class="col-xs-6">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo officiis omnis minus hic earum
+                        unde placeat sequi odit quas pariatur. Eveniet ratione dolores praesentium pariatur officia, ab
+                        expedita earum optio.</p>
+                </div>
             </div>
-        </div> -->
+
+            <button><a href="projects.html">See more of my projects</a></button>
+        </div>
 
         <div class="copyrightSection">
             <div class="col-md-12 text-center">
